# 50lambdas

./: 50lambdas.cabal  README.md  main.hs  post.sh
