name:                50lambdas
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              ealvarez
maintainer:          welcometothechango@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable 50lambdas
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , markov-chain >= 0.0.3
                     , bytestring >= 0.10
                     , random >= 1.0
  -- hs-source-dirs:      
  default-language:    Haskell2010
